chore: atualiza .gitignore e remove pasta .idea do repositório

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,31 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-.kotlin
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+# ===== IDEs =====
+.idea/
 .vscode/
+*.iml
 
-### Mac OS ###
+# ===== Java =====
+*.class
+
+# ===== Maven =====
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# ===== Logs =====
+*.log
+
+# ===== Sistema Operacional =====
 .DS_Store
+Thumbs.db
+
+# ===== Relatórios de teste =====
+allure-results/
+allure-report/
+
+# ===== Coverage =====
+coverage/
